--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,12 @@ body {
 .img-medium {
     height: 200px;
 }
-
+.container {
+    max-width: 800px;
+    margin: auto;
+    color: #505050;
+    font-family: sans-serif;
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
+        }
