[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -2,6 +2,7 @@ body {
     font-family: sans-serif;
     background-color: white;
     margin-top: 60px;
+    border:1px solid black;
 }
 
 .center {
