--- a/ui/style.css
+++ b/ui/style.css
@@ -2,7 +2,10 @@ body {
     font-family: sans-serif;
     background-color: white;
     margin-top: 60px;
-    border:1px solid black;
+    border:1px solid lightgray;
+}
+h3 {
+    text-decoration:underline;
 }
 
 .center {
@@ -27,4 +30,4 @@ body {
     font-family: sans-serif;
     padding-right: 20px;
     padding-left: 20px;
-        }
+}
