--- a/ui/style.css
+++ b/ui/style.css
@@ -1,7 +1,7 @@
 
 body {
     font-family: sans-serif;
-    background-color: white;
+    background-color: #e1e2ea;
     margin-top: 60px;
 }
 h3 {
