--- a/ui/style.css
+++ b/ui/style.css
@@ -31,7 +31,7 @@ h3 {
     padding-right: 20px;
     padding-left: 20px;
 }
-.button:hover {
+button:hover {
     background-color:pink;
     color: green;
     
