--- a/ui/style.css
+++ b/ui/style.css
@@ -4,20 +4,61 @@ body {
     background-color: #e1e2ea;
     margin-top: 60px;
 }
+
+.dropdown {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #b3b3b3;
+}
+li {
+  float: left;
+}
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+}
+li a:hover, .dropdown2:hover .dropbtn {
+    background-color: #36526b;
+    text-decoration:none;
+}
+
+li.dropdown2 {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+    color: darkgray;
+    padding: 12px 16px;
+    text-decoration: none;
+    border-bottom: 1px solid lightgray;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown2:hover .dropdown-content {
+    display: block;
+}
+
 h3 {
     text-decoration:underline;
 }
 
 .center {
     text-align: center;
-}
-
-.text-big {
-    font-size: 300%;
-}
-
-.bold {
-    font-weight: bold;
 }
 
 .img-medium {
@@ -34,7 +75,7 @@ h3 {
 button:hover {
     background-color:pink;
     color: green;
-    
+
 }
 #dateDiv, #timeDiv {
     color:green;
