--- a/ui/style.css
+++ b/ui/style.css
@@ -20,7 +20,10 @@ body {
     padding: 0;
     overflow: hidden;
     background-color: #b3b3b3;
-    float:left;
+}
+
+.dropdown li {
+  float: left;
 }
 
 li a, .dropbtn {
